<resources>
    <string name="app_name">HeaPeApps</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="login_with_google">Login with Google</string>
    <string name="family_task_with_HeaPe">Family Task with HeaPe</string>
    <string name="your_web_client_id">Your web client id</string>
    <string name="manage_your">Manage Your</string>
    <string name="img_close">img_close</string>
    <string name="question_fam">Already have family ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="who">Who will do</string>
    <string name="ibu">Ibu</string>
    <string name="ayah">Ayah</string>
    <string name="raka">Raka</string>
    <string name="maya">Maya</string>
    <string name="key">Key</string>
    <string name="jonas">Jonas</string>
    <string name="create_family">Create a Family</string>
    <string name="create">Create</string>
    <string name="join_the_family">Join the Family</string>
    <string name="input_token">Input Token</string>
    <string name="join">Join</string>
    <string name="create_task">Create Task</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="who_will_do">Who Will Do ?</string>
    <string name="description">Description</string>
    <string name="btn_create_new_task">Create new Task</string>
    <string name="end_time">End Time</string>
    <string name="back">back</string>
    <string name="add">add</string>
    <string name="who_will">__________________________________________</string>
    <string name="detail">Detail</string>
    <string name="bg">bg</string>
    <string name="family">family</string>
    <string name="family_name">Family Name</string>
    <string name="name">Name</string>
    <string name="token">token</string>
    <string name="kode">Token</string>
    <string name="members">Members</string>
    <string name="add_members">Add Members</string>
    <string name="Members">Members</string>
    <string name="calendar_description">calendar description</string>
    <string name="chart">Chart</string>
    <string name="background_chart">Background Chart</string>
    <string name="detail_members">Detail</string>
    <string name="members_logo">Members Logo</string>
    <string name="halo">Halo,</string>
    <string name="user">!</string>
    <string name="calendar">Calendar</string>
    <string name="member_dasboard">Member</string>
    <string name="logout">Logout</string>
    <string name="chart_dashboard">Chart</string>
    <string name="detail_dashboard">Detail</string>
    <string name="role_user">My Role</string>
    <string name="minat">Minat</string>
    <string name="keahlian">Skill</string>
    <string name="BirthDay">Birth Day</string>
    <string name="role_ayah">Father</string>
    <string name="role_ibu">Mother</string>
    <string name="role_anak">Children</string>
    <string name="makanan">Makanan</string>
    <string name="olahraga">Olahraga</string>
    <string name="alam">Alam</string>
    <string name="teknologi">Teknologi</string>
    <string name="hiburan">Hiburan</string>
    <string name="edukasi">Edukasi</string>
    <string name="animasi">Animasi</string>
    <string name="binatang">Binatang</string>
    <string name="keuangan">Keuangan</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="literatur">Literatur</string>
    <string name="masak">Masak</string>
    <string name="swakarya">Swakarya</string>
    <string name="sosialisasi">Sosialisasi</string>
    <string name="manajemen">Manajemen</string>
    <string name="otomotif">Otomotif</string>
    <string name="kelistrikan">Kelistrikan</string>
    <string name="berkebun">Berkebun</string>
    <string name="confirm_role">Confirm</string>
    <string name="edit_role">Edit</string>
    <string name="image_edit">Image Edit</string>
</resources>