<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoleActivity">

    <ImageButton
        android:id="@+id/back_Role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_Role"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/tv_Role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Members"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/My_Role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/role_user"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Role" />

    <TextView
        android:id="@+id/Minat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/minat"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/Skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/keahlian"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/BirthDay"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView3" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/My_Role">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:verticalScrollbarPosition="defaultPosition">

                <RadioButton
                    android:id="@+id/Father"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_btn_"
                    android:buttonTint="#000000"
                    android:checked="false"
                    android:paddingRight="10dp"
                    android:text="@string/role_ayah" />

                <RadioButton
                    android:id="@+id/Mother"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_btn_"
                    android:buttonTint="#000000"
                    android:paddingRight="10dp"
                    android:text="@string/role_ibu" />

                <RadioButton
                    android:id="@+id/Children"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_"
                    android:buttonTint="#000000"
                    android:paddingRight="10dp"
                    android:text="@string/role_anak" />
            </RadioGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Minat">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Makanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:checked="false"
                android:paddingRight="10dp"
                android:text="@string/makanan" />

            <CheckBox
                android:id="@+id/Olahraga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/olahraga" />

            <CheckBox
                android:id="@+id/Alam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/alam" />

            <CheckBox
                android:id="@+id/Teknologi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/teknologi" />

            <CheckBox
                android:id="@+id/Hiburan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/hiburan" />

            <CheckBox
                android:id="@+id/Edukasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/edukasi" />

            <CheckBox
                android:id="@+id/Animasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/animasi" />

            <CheckBox
                android:id="@+id/Binatang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/binatang" />

            <CheckBox
                android:id="@+id/Keuangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/keuangan" />

            <CheckBox
                android:id="@+id/Literatur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/literatur" />

            <CheckBox
                android:id="@+id/Kesehatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/kesehatan" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Skill">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Masak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/masak" />

            <CheckBox
                android:id="@+id/Swakarya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/swakarya" />

            <CheckBox
                android:id="@+id/Sosialisasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/sosialisasi" />

            <CheckBox
                android:id="@+id/Manajemen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/manajemen" />

            <CheckBox
                android:id="@+id/Otomotif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/otomotif" />

            <CheckBox
                android:id="@+id/Kelistrikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/kelistrikan" />

            <CheckBox
                android:id="@+id/Berkebun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/berkebun" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/confirm_members"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/gold"
        android:text="@string/confirm_role"
        app:cornerRadius="12dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/Age"
        app:layout_constraintStart_toStartOf="@+id/Age"
        app:layout_constraintTop_toBottomOf="@+id/Age" />

</androidx.constraintlayout.widget.ConstraintLayout>